update 优化 StreamUtils 方法过滤null值